--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username = root
 spring.datasource.password = jktcmljcrex19
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode = always
