--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.password = jktcmljcrex19
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
 
-
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode = always
+
+spring.mvc.view.prefix= /WEB-INF/pages/
+spring.mvc.view.suffix= .jsp
